# cloud_run_template

./: .gcloudignore  Dockerfile  api.py  app.py  frontend.py  main.py  pyproject.toml  requirements.txt
